# Blackhole

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  BUILD.md  BUILD_OPTIMIZATION.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONAN2_FULL_MIGRATION.md  Doxyfile.in  FINAL_PERFORMANCE_ANALYSIS.md  INTELLIGENT_MERGE_SUMMARY.md  NATIVE_BUILD_WORKFLOW.md  PERFORMANCE_REPORT_FINAL.md  PHYSICS_ARCHITECTURE.md  QUICKSTART.md  README.md  STATUS.md  TODO_FIXES.md  WAYLAND_OPTIMIZATION.md  claude.md  conanfile.py  gemini.md  pyproject.toml  requirements.md
.conan/: global.conf
bench/: README.md  physics_bench.cpp  physics_google_bench.cpp
blender/: blackhole.blend
cmake/: ValidateShader.cmake
docs/: BACKGROUND_ASSET_PIPELINE.md  BUILDING.md  CLEANROOM_DECISIONS.md  CLEANROOM_IMPORTS.md  CLEANROOM_INTEROP_NOTES.md  CLEANROOM_MIGRATION_WORKLIST.md  CLEANROOM_PORT_MAP.md  COMPARE_SWEEP.md  CONAN2_MIGRATION.md  EIGEN_REFACTOR_PLAN.md  EXECUTION_PLAN_2026Q1.md  FINAL_SUMMARY_AND_ACTIONS.md  GPU_PERFORMANCE_ANALYSIS.md  GRB_MODULATION_PLAN.md  GRMHD_INGESTION_PLAN.md  HUD.md  IMAGE_SOURCES.md  INTEROP_BEST_PRACTICES.md  LOCAL_REPOS_SCOPE.md  LUT_PIPELINE_PLAN.md  MASTER_ROADMAP.md  MASTER_STATUS_PHASES5-6.txt  NATIVE_BUILD_REFACTOR.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_CRITICAL_FIX.md  PERFORMANCE_FIX_CRITICAL.md  PERFORMANCE_REPORT.md  PERF_TOOLING.md  PHASE10_TESTING_GUIDE.md  PHASE3_ASSET_DOWNLOAD_GUIDE.md  PHASE8_3_COMPLETION_SUMMARY.md  PHASE8_4_GPU_OPTIMIZATION.md  PHASE8_SHADER_ANALYSIS.md  PHASE9_0_COMPLETE.md  PHASE9_0_GLSL_TRANSPILATION.md  PHASE9_CONSUMER_GPU_AND_EXTENDED_PHYSICS.md  PHYSICS_MATH_LACUNAE.md  RADIATIVE_TRANSFER_LUT_PLAN.md  README.md  ROADMAP.md  (+15 more)
fuzz/: fuzz_headers.cpp  fuzz_physics.cpp  fuzz_shader.cpp
infer-out/: logs
rocq/: .Makefile.coq.d  .nra.cache  Makefile.coq.conf  README.md  _CoqProject  physics.ml  physics.mli  physics_axiodilaton.ml  physics_axiodilaton.mli  physics_geodesic.ml  physics_geodesic.mli  physics_kerr.ml  physics_kerr.mli  physics_kerr_extended.ml  physics_kerr_extended.mli  physics_null.ml  physics_null.mli  physics_quantum.ml  physics_quantum.mli  physics_rk4.ml  physics_rk4.mli  physics_schwarzschild.ml  physics_schwarzschild.mli  physics_wormhole.ml  physics_wormhole.mli
scripts/: analyze_gpu_timing.py  askpass-unified.sh  assemble_blackhole_showcase.py  blender_addon_smoke_inner.py  blender_interactive_benchmark_inner.py  blender_mcp_enable_studio.py  blender_mcp_headless_session.py  blender_mcp_probe.py  build-master.sh  build-optimized.sh  build-profiling.sh  build-quick.sh  cleanup_artifacts.sh  collect_perf_pack.sh  compare_raw_texblackhole.py  compile_shaders_spirv.sh  conan.sh  conan_env.sh  conan_export_local_recipes.sh  conan_init.sh  conan_install.sh  cpp_to_glsl.py  dream_textures_probe_inner.py  eht_shadow_metrics.py  equirect_to_cubemap.py  fetch_background_assets.sh  fetch_implot.sh  flat_to_cubemap.py  generate_grb_luts.py  generate_grb_modulation_lut.py  generate_hawking_lut.py  generate_luts.py  generate_nt_lut.py  generate_tardis_lut_stub.py  generate_validation_tables.py  install_blender_addon.py  install_dream_textures_runtime.py  launch_octane_interactive.sh  launch_octane_server.sh  ligo_comparison.py  (+38 more)
shader/: README.md  accessibility.frag  blackhole_main.frag  blackhole_main.frag.backup.300steps  blackhole_main.frag.backup.balanced  bloom_brightness_pass.frag  bloom_composite.frag  bloom_downsample.frag  bloom_upsample.frag  depth_cues.frag  drawid_cull.comp  drawid_probe.frag  drawid_probe.vert  geodesic_trace.comp  geodesic_trace_optimized.comp  grmhd_raytracer_composite.comp  grmhd_raytracer_composite.frag  grmhd_slice.frag  hawking_glow.glsl  hawking_luts.glsl  integrator.glsl  overlay_text.frag  overlay_text.vert  passthrough.frag  passthrough_drawid.frag  passthrough_drawid.vert  raytracer.frag  rt_grmhd_composite.comp  rt_grmhd_composite.frag  simple.vert  synchrotron_lut.glsl  tonemapping.frag  wiregrid.frag  wiregrid.glsl  wiregrid.vert
src/: GLDebugMessageCallback.cc  GLDebugMessageCallback.h  cinematic.h  compat.h  depth_prepass.h  gl_loader.h  grmhd_hdf5_loader.cpp  grmhd_hdf5_loader.h  grmhd_packed_loader.cpp  grmhd_packed_loader.h  grmhd_pbo_uploader.cpp  grmhd_pbo_uploader.h  grmhd_streaming.cpp  grmhd_streaming.h  hud_overlay.cpp  hud_overlay.h  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  input.cpp  input.h  kerr.cpp  kerr.hpp  main.cpp  mesh_optimizer.h  (+19 more)
src/blender_bridge/: CMakeLists.txt  blender_bridge.cpp  blender_bridge.h  cuda_postprocess.cu  cuda_renderer.cu
src/cuda/: CMakeLists.txt  bh_gl_interop.h  cuda_backend.cu  cuda_backend.h  cuda_gl_interop.cu  cuda_render_manager.h  device_analytic_kerr.cuh  device_physics.cuh  kernel_launch.cu  kernel_launch.h  kernel_registry.cu  kernel_registry.h  kernels_fp16.cu  kernels_fp16_h2.cu  kernels_fp32.cu  lut_manager.cu  lut_manager.h
tests/: CMakeLists.txt  absorption_models_test.cpp  analytic_geodesic_reproducibility_test.cpp  benchmark_raytracer.py  connection_test.cpp  coordinates_test.cpp  cuda_analytic_kerr_test.cu  cuda_device_physics_test.cu  cuda_geodesic_orbit_test.cu  cuda_grmhd_lut_test.cu  cuda_kernel_launch_test.cpp  cuda_rte_test.cu  cuda_stokes_test.cu  cuda_variants_test.cu  doppler_beaming_test.cpp  eht_shadow_test.cpp  eht_visibility_test.cpp  electron_temperature_test.cpp  elliptic_integrals_test.cpp  fits_writer_test.cpp  frame_dragging_test.cpp  galaxy_cubemap_face_test.cpp  glsl_parity_test.cpp  gpu_compute_validation_test.cpp  gpu_cpu_parity_test.cpp  gpu_parity_harness.py  gpu_raytracer_kernel_test.cpp  grmhd_composite_raytracer_test.cpp  grmhd_gpu_async_test.cpp  grmhd_hdf5_loader_test.cpp  grmhd_metadata_test.cpp  grmhd_pack_test.cpp  grmhd_pbo_uploader_test.cpp  grmhd_streamer_test.cpp  gw_memory_precession_test.cpp  gw_multipole_test.cpp  gw_phase_4p5pn_test.cpp  gw_waveform_test.cpp  hawking_glow_test.cpp  hawking_spectrum_test.cpp  (+41 more)
tests/python/: test_camera_mapping.py  test_render_regression.py  test_sd_textures.py
(+345 files in other folders)
